@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19980422
+MANIFEST for cm_tools, version t19981209
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
